Moved publishing to central